--- a/dist.ini
+++ b/dist.ini
@@ -1,27 +1,22 @@
 name    = CatalystX-DebugFilter
-version = 0.01
+version = 0.02
 author  = Brian Phillips <bphillips@cpan.org>
 license = Perl_5
 copyright_holder = Brian Phillips
-[AllFiles]
+[GatherDir]
 [PruneCruft]
 [ManifestSkip]
 [MetaYAML]
 [Readme]
+[PodWeaver]
 [PkgVersion]
-[PodVersion]
-[PodTests]
+[PodSyntaxTests]
+[PodCoverageTests]
 [ExtraTests]
-[InstallDirs]
 [MakeMaker]
 [Manifest]
-[PodWeaver]
 [ReadmeFromPod]
 [UploadToCPAN]
-[Prereq]
-Clone=0
-Moose=0
-namespace::autoclean=0
-Catalyst::Runtime=5.80022
+[AutoPrereq]
 [@Git]
 filename = Changes
