--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = CatalystX-DebugFilter
-version = 0.02
+version = 0.03
 author  = Brian Phillips <bphillips@cpan.org>
 license = Perl_5
 copyright_holder = Brian Phillips
@@ -13,10 +13,13 @@ copyright_holder = Brian Phillips
 [PodSyntaxTests]
 [PodCoverageTests]
 [ExtraTests]
-[MakeMaker]
+[ModuleBuild]
 [Manifest]
 [ReadmeFromPod]
 [UploadToCPAN]
+[NextRelease]
 [AutoPrereq]
+[MetaResources]
+repository = http://github.com/brianphillips/CatalystX-DebugFilter
 [@Git]
 filename = Changes
