--- a/META.yml
+++ b/META.yml
@@ -18,16 +18,17 @@ build_requires:
   ok: 0
 configure_requires:
   Module::Build: 0.3601
-generated_by: 'Dist::Zilla version 2.100880'
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.101740, CPAN::Meta::Converter version 2.101610'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: CatalystX-DebugFilter
 requires:
-  Clone: 0
+  Clone::Fast: 0
   Moose::Role: 0
   namespace::autoclean: 0
 resources:
   repository: http://github.com/brianphillips/CatalystX-DebugFilter
-version: 0.03
+version: 0.04
