Import of BPHILLIPS/CatalystX-DebugFilter-0.06.tar.gz from CPAN.
gitpan-cpan-distribution: CatalystX-DebugFilter
gitpan-cpan-version:      0.06
gitpan-cpan-path:         BPHILLIPS/CatalystX-DebugFilter-0.06.tar.gz
gitpan-cpan-author:       BPHILLIPS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -26,9 +26,9 @@ meta-spec:
   version: 1.4
 name: CatalystX-DebugFilter
 requires:
-  Clone::Fast: 0
+  Clone::PP: 0
   Moose::Role: 0
   namespace::autoclean: 0
 resources:
   repository: http://github.com/brianphillips/CatalystX-DebugFilter
-version: 0.05
+version: 0.06
