--- a/META.yml
+++ b/META.yml
@@ -9,6 +9,7 @@ build_requires:
   Catalyst::ScriptRunner: 0
   Catalyst::Test: 0
   FindBin: 0
+  HTTP::Request::Common: 0
   Module::Build: 0.3601
   Moose: 0
   Test::More: 0
@@ -26,9 +27,9 @@ meta-spec:
   version: 1.4
 name: CatalystX-DebugFilter
 requires:
-  Clone::PP: 0
   Moose::Role: 0
+  Scalar::Util: 0
   namespace::autoclean: 0
 resources:
   repository: http://github.com/brianphillips/CatalystX-DebugFilter
-version: 0.06
+version: 0.07
