--- a/META.yml
+++ b/META.yml
@@ -17,10 +17,12 @@ build_requires:
   Test::Pod::Coverage: 1.04
   Test::WWW::Mechanize::Catalyst: 0
   ok: 0
+  strict: 0
+  warnings: 0
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101740, CPAN::Meta::Converter version 2.101610'
+generated_by: 'Dist::Zilla version 4.300025, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,4 +34,4 @@ requires:
   namespace::autoclean: 0
 resources:
   repository: http://github.com/brianphillips/CatalystX-DebugFilter
-version: 0.09
+version: 0.10
