--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = CatalystX-DebugFilter
-version = 0.10
+version = 0.11
 author  = Brian Phillips <bphillips@cpan.org>
 license = Perl_5
 copyright_holder = Brian Phillips
@@ -18,7 +18,7 @@ copyright_holder = Brian Phillips
 [ReadmeFromPod]
 [UploadToCPAN]
 [NextRelease]
-[AutoPrereq]
+[AutoPrereqs]
 [MetaResources]
 repository = http://github.com/brianphillips/CatalystX-DebugFilter
 [@Git]
